--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Flips</title>
+<title>Image Flips</title>
 <link href="stylesheets/styles.css" media="screen, projection" rel="stylesheet" type="text/css" />
 </head>
 <body>
