add js resources

--- a/index.html
+++ b/index.html
@@ -5,5 +5,9 @@
 <link href="stylesheets/styles.css" media="screen, projection" rel="stylesheet" type="text/css" />
 </head>
 <body>
-</body>>
+
+
+<script src="https://code.jquery.com/jquery-1.10.0.min.js"></script>
+<script src="js/script.js"></script>
+</body>
 </html>
