--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!doctype html>
 <html>
 <head>
-<title>Image Flips</title>
-<link href="stylesheets/styles.css" media="screen, projection" rel="stylesheet" type="text/css" />
+	<title>Image Flips</title>
+	<link href="stylesheets/styles.css" media="screen, projection" rel="stylesheet" type="text/css" />
 </head>
 <body>
-
-
-<script src="https://code.jquery.com/jquery-1.10.0.min.js"></script>
-<script src="js/script.js"></script>
+	<div class="flip"> 
+	    <div class="card"> 
+	        <div class="face front"> 
+	            Front
+	        </div> 
+	        
+	        <div class="face back"> 
+	            Back
+	        </div> 
+	    </div> 
+	</div> 
+	<script src="https://code.jquery.com/jquery-1.10.0.min.js"></script>
+	<script src="js/script.js"></script>
 </body>
 </html>
