add flip functionality

--- a/index.html
+++ b/index.html
@@ -5,17 +5,62 @@
 	<link href="stylesheets/styles.css" media="screen, projection" rel="stylesheet" type="text/css" />
 </head>
 <body>
-	<div class="flip"> 
+	<!--CARD 1-->
+	<div class="flip card-1"> 
 	    <div class="card"> 
 	        <div class="face front"> 
-	            Front
-	        </div> 
-	        
-	        <div class="face back"> 
-	            Back
+	            <img src="assets/house1.jpg" />
+	        </div>	        
+	        <div class="face back">
+	        	<img src="assets/house1.jpg" />
+	        	<span class="back-details">
+	        		<h5>House #1</h5>
+	        	</span>
 	        </div> 
 	    </div> 
-	</div> 
+	</div>
+	<!--CARD 2-->
+	<div class="flip card-2"> 
+	    <div class="card"> 
+	        <div class="face front"> 
+	            <img src="assets/house2.jpg" />
+	        </div>	        
+	        <div class="face back">
+	        	<img src="assets/house2.jpg" />
+	        	<span class="back-details">
+	        		<h5>House #2</h5>
+	        	</span>
+	        </div> 
+	    </div> 
+	</div>
+	<!--CARD 3-->
+	<div class="flip card-3"> 
+	    <div class="card"> 
+	        <div class="face front"> 
+	            <img src="assets/house3.jpg" />
+	        </div> 
+	        <div class="face back">
+	        	<img src="assets/house3.jpg" />
+	        	<span class="back-details">
+	        		<h5>House #3</h5>
+	        	</span>
+	        </div> 
+	    </div> 
+	</div>
+	<!--CARD 4-->
+	<div class="flip card-4"> 
+	    <div class="card"> 
+	        <div class="face front"> 
+	            <img src="assets/house4.jpg" />
+	        </div>
+	        <div class="face back">
+	        	<img src="assets/house4.jpg" />
+	        	<span class="back-details">
+	        		<h5>House #4</h5>
+	        	</span>
+	        </div> 
+	    </div> 
+	</div>
 	<script src="https://code.jquery.com/jquery-1.10.0.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
