--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Image Flips</title>
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css' />
 	<link href="stylesheets/styles.css" media="screen, projection" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -14,7 +15,7 @@
 	        <div class="face back">
 	        	<img src="assets/house1.jpg" />
 	        	<span class="back-details">
-	        		<h5>House #1</h5>
+	        		<h4>20327 Scarlett Saddle Court</h4>
 	        	</span>
 	        </div> 
 	    </div> 
@@ -28,7 +29,7 @@
 	        <div class="face back">
 	        	<img src="assets/house2.jpg" />
 	        	<span class="back-details">
-	        		<h5>House #2</h5>
+	        		<h4>House #2</h4>
 	        	</span>
 	        </div> 
 	    </div> 
@@ -42,7 +43,7 @@
 	        <div class="face back">
 	        	<img src="assets/house3.jpg" />
 	        	<span class="back-details">
-	        		<h5>House #3</h5>
+	        		<h4>House #3</h4>
 	        	</span>
 	        </div> 
 	    </div> 
@@ -56,7 +57,7 @@
 	        <div class="face back">
 	        	<img src="assets/house4.jpg" />
 	        	<span class="back-details">
-	        		<h5>House #4</h5>
+	        		<h4>House #4</h4>
 	        	</span>
 	        </div> 
 	    </div> 
