add first details row

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Image Flips</title>
-	<link href='http://fonts.googleapis.com/css?family=Lato:400,300' rel='stylesheet' type='text/css' />
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,300,600' rel='stylesheet' type='text/css' />
 	<link href="stylesheets/styles.css" media="screen, projection" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -16,6 +16,10 @@
 	        	<img src="assets/house1.jpg" />
 	        	<span class="back-details">
 	        		<h4>20327 Scarlett Saddle Court</h4>
+	        		<div class="details-row details-row-1">
+	        			<span class="lot-size"><strong>Lot Size: </strong>70'</span>
+	        			<span class="price"><strong>Price: </strong>$429,990</span>
+	        		</div>
 	        	</span>
 	        </div> 
 	    </div> 
@@ -29,7 +33,7 @@
 	        <div class="face back">
 	        	<img src="assets/house2.jpg" />
 	        	<span class="back-details">
-	        		<h4>House #2</h4>
+	        		<h4>19834 Hamlet Shadow Lane</h4>
 	        	</span>
 	        </div> 
 	    </div> 
@@ -43,7 +47,7 @@
 	        <div class="face back">
 	        	<img src="assets/house3.jpg" />
 	        	<span class="back-details">
-	        		<h4>House #3</h4>
+	        		<h4>11015 Sarah Bluff Lane</h4>
 	        	</span>
 	        </div> 
 	    </div> 
@@ -57,7 +61,7 @@
 	        <div class="face back">
 	        	<img src="assets/house4.jpg" />
 	        	<span class="back-details">
-	        		<h4>House #4</h4>
+	        		<h4>19827 Carsenwood Lane</h4>
 	        	</span>
 	        </div> 
 	    </div> 
