--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
 	        			<span class="lot-size"><strong>Lot Size: </strong>70'</span>
 	        			<span class="price"><strong>Price: </strong>$429,990</span>
 	        		</div>
+	        		<div class="details-row details-row-2">
+	        			<span class="sqft"><strong>Sq. Ft: </strong>4888</span>
+	        			<span class="beds"><strong>Beds: </strong>4</span>
+	        			<span class="baths"><strong>Baths: </strong>4.5</span>
+	        		</div>
 	        	</span>
 	        </div> 
 	    </div> 
@@ -34,6 +39,15 @@
 	        	<img src="assets/house2.jpg" />
 	        	<span class="back-details">
 	        		<h4>19834 Hamlet Shadow Lane</h4>
+					<div class="details-row details-row-1">
+	        			<span class="lot-size"><strong>Lot Size: </strong>70'</span>
+	        			<span class="price"><strong>Price: </strong>$429,990</span>
+	        		</div>
+	        		<div class="details-row details-row-2">
+	        			<span class="sqft"><strong>Sq. Ft: </strong>4888</span>
+	        			<span class="beds"><strong>Beds: </strong>4</span>
+	        			<span class="baths"><strong>Baths: </strong>4.5</span>
+	        		</div>
 	        	</span>
 	        </div> 
 	    </div> 
