--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 	        			<span class="beds"><strong>Beds: </strong>4</span>
 	        			<span class="baths"><strong>Baths: </strong>4.5</span>
 	        		</div>
+	        		<div class="details-row details-row-3">
+	        			<span class="builder"><strong>Builder: </strong>Perry Homes</span>
+	        		</div>
 	        	</span>
 	        </div> 
 	    </div> 
@@ -48,6 +51,9 @@
 	        			<span class="beds"><strong>Beds: </strong>4</span>
 	        			<span class="baths"><strong>Baths: </strong>4.5</span>
 	        		</div>
+	        		<div class="details-row details-row-3">
+	        			<span class="builder"><strong>Builder: </strong>Perry Homes</span>
+	        		</div>
 	        	</span>
 	        </div> 
 	    </div> 
@@ -62,6 +68,18 @@
 	        	<img src="assets/house3.jpg" />
 	        	<span class="back-details">
 	        		<h4>11015 Sarah Bluff Lane</h4>
+					<div class="details-row details-row-1">
+	        			<span class="lot-size"><strong>Lot Size: </strong>70'</span>
+	        			<span class="price"><strong>Price: </strong>$429,990</span>
+	        		</div>
+	        		<div class="details-row details-row-2">
+	        			<span class="sqft"><strong>Sq. Ft: </strong>4888</span>
+	        			<span class="beds"><strong>Beds: </strong>4</span>
+	        			<span class="baths"><strong>Baths: </strong>4.5</span>
+	        		</div>
+	        		<div class="details-row details-row-3">
+	        			<span class="builder"><strong>Builder: </strong>Perry Homes</span>
+	        		</div>
 	        	</span>
 	        </div> 
 	    </div> 
@@ -76,6 +94,18 @@
 	        	<img src="assets/house4.jpg" />
 	        	<span class="back-details">
 	        		<h4>19827 Carsenwood Lane</h4>
+					<div class="details-row details-row-1">
+	        			<span class="lot-size"><strong>Lot Size: </strong>70'</span>
+	        			<span class="price"><strong>Price: </strong>$429,990</span>
+	        		</div>
+	        		<div class="details-row details-row-2">
+	        			<span class="sqft"><strong>Sq. Ft: </strong>4888</span>
+	        			<span class="beds"><strong>Beds: </strong>4</span>
+	        			<span class="baths"><strong>Baths: </strong>4.5</span>
+	        		</div>
+	        		<div class="details-row details-row-3">
+	        			<span class="builder"><strong>Builder: </strong>Perry Homes</span>
+	        		</div>
 	        	</span>
 	        </div> 
 	    </div> 
