add bottom bar to back of card

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Image Flips</title>
-	<link href='http://fonts.googleapis.com/css?family=Lato:400,300,600' rel='stylesheet' type='text/css' />
+	<link href='http://fonts.googleapis.com/css?family=Lato:400,300,600|Arapey' rel='stylesheet' type='text/css' />
 	<link href="stylesheets/styles.css" media="screen, projection" rel="stylesheet" type="text/css" />
 </head>
 <body>
@@ -29,6 +29,7 @@
 	        			<span class="builder"><strong>Builder: </strong>Perry Homes</span>
 	        		</div>
 	        	</span>
+	        	<div class="bottom-bar"><a href="#">Full Details ></a></div>
 	        </div> 
 	    </div> 
 	</div>
@@ -55,6 +56,7 @@
 	        			<span class="builder"><strong>Builder: </strong>Perry Homes</span>
 	        		</div>
 	        	</span>
+	        	<div class="bottom-bar"><a href="#">Full Details ></a></div>
 	        </div> 
 	    </div> 
 	</div>
@@ -81,6 +83,7 @@
 	        			<span class="builder"><strong>Builder: </strong>Perry Homes</span>
 	        		</div>
 	        	</span>
+	        	<div class="bottom-bar"><a href="#">Full Details ></a></div>
 	        </div> 
 	    </div> 
 	</div>
@@ -107,6 +110,7 @@
 	        			<span class="builder"><strong>Builder: </strong>Perry Homes</span>
 	        		</div>
 	        	</span>
+	        	<div class="bottom-bar"><a href="#">Full Details ></a></div>
 	        </div> 
 	    </div> 
 	</div>
