add price to front card

--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
 	<!--CARD 1-->
 	<div class="flip card-1"> 
 	    <div class="card"> 
-	        <div class="face front"> 
+	        <div class="face front">
 	            <img src="assets/house1.jpg" />
+	            <span class="front-details">
+	            	<h4>$429,990</h4>
+	            </span>
 	        </div>	        
 	        <div class="face back">
 	        	<img src="assets/house1.jpg" />
@@ -36,8 +39,11 @@
 	<!--CARD 2-->
 	<div class="flip card-2"> 
 	    <div class="card"> 
-	        <div class="face front"> 
+	        <div class="face front">
 	            <img src="assets/house2.jpg" />
+	           	<span class="front-details">
+	            	<h4>$429,990</h4>
+	            </span>
 	        </div>	        
 	        <div class="face back">
 	        	<img src="assets/house2.jpg" />
@@ -61,10 +67,13 @@
 	    </div> 
 	</div>
 	<!--CARD 3-->
-	<div class="flip card-3"> 
-	    <div class="card"> 
-	        <div class="face front"> 
+	<div class="flip card-3">
+	    <div class="card">
+	        <div class="face front">
 	            <img src="assets/house3.jpg" />
+	           	<span class="front-details">
+	            	<h4>$429,990</h4>
+	            </span>
 	        </div> 
 	        <div class="face back">
 	        	<img src="assets/house3.jpg" />
@@ -88,10 +97,13 @@
 	    </div> 
 	</div>
 	<!--CARD 4-->
-	<div class="flip card-4"> 
-	    <div class="card"> 
-	        <div class="face front"> 
+	<div class="flip card-4">
+	    <div class="card">
+	        <div class="face front">
 	            <img src="assets/house4.jpg" />
+	           	<span class="front-details">
+	            	<h4>$429,990</h4>
+	            </span>
 	        </div>
 	        <div class="face back">
 	        	<img src="assets/house4.jpg" />
