add beds to front

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 	            <img src="assets/house1.jpg" />
 	            <span class="front-details">
 	            	<h4>$429,990</h4>
+	            	<div class="front-icons">
+	            		<div class="front-bed"><img src="assets/icon-bed-white.png" /><span>4</span></div>
+	            	</div>
 	            </span>
 	        </div>	        
 	        <div class="face back">
@@ -43,6 +46,9 @@
 	            <img src="assets/house2.jpg" />
 	           	<span class="front-details">
 	            	<h4>$429,990</h4>
+	            	<div class="front-icons">
+	            		<div class="front-bed"><img src="assets/icon-bed-white.png" /><span>4</span></div>
+	            	</div>
 	            </span>
 	        </div>	        
 	        <div class="face back">
@@ -73,6 +79,9 @@
 	            <img src="assets/house3.jpg" />
 	           	<span class="front-details">
 	            	<h4>$429,990</h4>
+	            	<div class="front-icons">
+	            		<div class="front-bed"><img src="assets/icon-bed-white.png" /><span>4</span></div>
+	            	</div>
 	            </span>
 	        </div> 
 	        <div class="face back">
@@ -103,6 +112,9 @@
 	            <img src="assets/house4.jpg" />
 	           	<span class="front-details">
 	            	<h4>$429,990</h4>
+	            	<div class="front-icons">
+	            		<div class="front-bed"><img src="assets/icon-bed-white.png" /><span>4</span></div>
+	            	</div>
 	            </span>
 	        </div>
 	        <div class="face back">
