--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 	            <span class="front-details">
 	            	<h4>$429,990</h4>
 	            	<div class="front-icons">
-	            		<div class="front-bed"><img src="assets/icon-bed-white.png" /><span>4</span></div>
+	            		<div class="front-icon"><img src="assets/icon-bed-white.png" /><span>4</span></div>
+	            		<div class="front-icon"><img src="assets/icon-bath-white.png" class="front-bath"/><span>4.5</span></div>
 	            	</div>
+
 	            </span>
 	        </div>	        
 	        <div class="face back">
@@ -47,7 +49,8 @@
 	           	<span class="front-details">
 	            	<h4>$429,990</h4>
 	            	<div class="front-icons">
-	            		<div class="front-bed"><img src="assets/icon-bed-white.png" /><span>4</span></div>
+	            		<div class="front-icon"><img src="assets/icon-bed-white.png" /><span>4</span></div>
+	            		<div class="front-icon"><img src="assets/icon-bath-white.png" class="front-bath"/><span>4.5</span></div>
 	            	</div>
 	            </span>
 	        </div>	        
@@ -80,7 +83,8 @@
 	           	<span class="front-details">
 	            	<h4>$429,990</h4>
 	            	<div class="front-icons">
-	            		<div class="front-bed"><img src="assets/icon-bed-white.png" /><span>4</span></div>
+	            		<div class="front-icon"><img src="assets/icon-bed-white.png" /><span>4</span></div>
+	            		<div class="front-icon"><img src="assets/icon-bath-white.png" class="front-bath"/><span>4.5</span></div>
 	            	</div>
 	            </span>
 	        </div> 
@@ -113,7 +117,8 @@
 	           	<span class="front-details">
 	            	<h4>$429,990</h4>
 	            	<div class="front-icons">
-	            		<div class="front-bed"><img src="assets/icon-bed-white.png" /><span>4</span></div>
+	            		<div class="front-icon"><img src="assets/icon-bed-white.png" /><span>4</span></div>
+	            		<div class="front-icon"><img src="assets/icon-bath-white.png" class="front-bath"/><span>4.5</span></div>
 	            	</div>
 	            </span>
 	        </div>
